# sschema

./: .gitignore  README.md  dev-requirements.txt  meson.build  requirements.txt  setup.py
schema/: endian.yaml  type.yaml  unit.yaml
scripts/: flake8
sschema/: __init__.py
sschema/formatchecker/: infix.py
sschema/handler/: include.py  sschema.py
sschema/schema/: endian.yaml  raw-unit.yaml  si-unit.yaml  type.yaml  unit.yaml  uuid.yaml
